charts/services/cockpit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockpit-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: cockpit.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cockpit-external
                port:
                  number: 9090
  tls:
    - hosts:
        - cockpit.batsworks.com.br
      secretName: tls-cockpit
